edited endpoint